# aq-telemetry

./: .gitignore  Cargo.toml  README.md
config/: widgets.toml
src/: main.rs
src/application/: aquarium_service.rs  dashboard_service.rs  mod.rs  streaming_service.rs  telemetry_repository.rs
src/domain/: aquarium.rs  dashboard.rs  mod.rs  telemetry.rs
src/infrastructure/: chunked_thrift.rs  config.rs  http_response.rs  influx_repository.rs  mod.rs  thrift_mapper.rs
src/presentation/: app_state.rs  handlers.rs  mod.rs
