[package]
name = "aquarium-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.36", features = ["brotli", "tokio"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.7"
bytes = "1.11.0"
chrono = "0.4.42"
config = "0.15.19"
futures = "0.3.31"
influxdb2 = "0.5.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telemetry-thrift = { git = "https://github.com/senthilkumarv/aq-telemetry-idl.git", tag = "v0.0.2" }
thiserror = "2.0.17"
thrift = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8"
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
